# ImgPlayGround

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
mcp/: server.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  git.rs  github.rs  keys.rs  lib.rs  main.rs  pixelate.rs  storage.rs
src-tauri/src/providers/: bfl.rs  fal.rs  google.rs  mod.rs  openai.rs  replicate.rs  stability.rs
src/components/: BottomBar.tsx  BulkGauge.tsx  BulkPanel.tsx  ContextMenu.tsx  Gallery.tsx  GeneratePanel.tsx  GitHubSection.tsx  ImageViewer.tsx  KeyManager.tsx  PageHeader.tsx  PixelEditor.tsx  ProviderChip.tsx  Queue.tsx  Rail.tsx  Settings.tsx  Spinner.tsx  StatusChip.tsx  Toasts.tsx  UpdateBanner.tsx
src/lib/: store.ts  tauri.ts  types.ts
