[package]
name = "imgplayground"
version = "1.1.0"
description = "Bulk image generation across major providers"
authors = ["JaceDev"]
license = "MIT"
edition = "2021"

[lib]
name = "imgplayground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
base64 = "0.22"
anyhow = "1"
thiserror = "1"
keyring = { version = "3", features = ["linux-native", "apple-native", "windows-native"] }
sha2 = "0.10"
chrono = "0.4"
slug = "0.1"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
